<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Splash Screen Activity -->
    <string name="splashLabel"></string>

    <!-- Main Activity -->
    <string name="app_name">الشاحن الذكي</string>
    <string name="menu_settings">خصائص البرنامج</string>
    <string name="sim_name">نوع الشريحة</string>
    <string name="title_activity_report">التقارير</string>

    <!-- Titles -->
    <string name="title_activity_charge">شحن الرصيد</string>
    <string name="title_activity_convert">تحويل الرصيد</string>
    <string name="title_activity_current">الرصيد الحالي</string>
    <string name="title_activity_callme">خدمة كلمني</string>
    <string name="title_activity_history">أخر العمليات</string>

    <!-- Convert Activity -->
    <string name="convertBalanceLbl">حول لى</string>
    <string name="otherNumberLbl">أدخل الرقم</string>
    <string name="balanceLbl">أدخل المبلغ</string>
    <string name="balanceEditTextHint">ادخل عدد الجنيهات المراد تحويلها</string>
    <string name="convertEditTextHint">ادخل الرقم الذي تود التحويل اليه</string>
	<string name="transfereLabel">لتحويل الرصيد قم بادخال الرقم الذي تود التحويل اليه والمبلغ المراد تحويله</string>
	
    <!-- Charge Activity -->
    <string name="ocrButtonLbl">اشحن بالكاميرا</string>
    <string name="chargeButtonLbl">شحن الرصيد</string>
    <string name="numberEditTextLbl">الأرقام التي تم التعرف عليها سيتم كتابتها هنا</string>
    <string name="picture">الصورة الملتقطة</string>
    <string name="title_charge_dialog">كم مقدار الشحن</string>
    <string name="body_charge_dialog">من فضلك أدخل مقدار الشحن حتى يتم اخراج تقارير لك فيما بعد عن عمليات الشحن ومقدارها في كل فترة</string>
    <string name="chargeLabel">يمكنك كتابه ارقام البطاقة أو تصويرها بالكاميرا أو من خلال قرائتها بصوتك</string>
    <string name="voice_label">اشحن بالصوت</string>
    
    <!-- Callme Activity -->
    <string name="callmeNumberLbl">أدخل الرقم</string>
    <string name="sendCallmeLbl">ارسل كول مي</string>
	<string name="callmeLabel">لارسال كلمني قم بادخال الرقم الذي تود الارسال اليه، مع العلم أن بعض الشبكات لا تدعم هذه الخدمة</string>
	
    <!-- Preference Activity -->
    <string name="user_settings">اعدادات المستخدم</string>
    <string name="app_settings">اعدادات البرنامج</string>
    <string name="languageSettingLbl">اللغه</string>
    <string name="languageSettingSummary">لغه البرنامج</string>
    <string name="simTypeLbl">اختر الشركة</string>
    <string name="simTypeSummary">من فضلك اختر  الشركة</string>
    <string name="simNoLbl">رقم الشريحة</string>
    <string name="simNoSummary">ادخل رقم الشريحة اذا كنت تود ذلك</string>
    <string name="clearDb">تفريغ قاعدة البيانات</string>
    <string name="clearDbDescription">اضغط هنا لتصفير استخدام البرنامج</string>
	<string name="pref_share_summary">شارك البرنامج مع اصدقائك</string>
	<string name="pref_share_title">انشر البرنامج</string>
	<string name="pref_rate_summary">قيم البرنامج في معرض البرامج</string>
	<string name="pref_rate_title">قيم البرنامج</string>
	<string name="pref_emaildialog_message">هل تريد ارسال رسالة لابداء الملاحظات؟</string>
	<string name="pref_emaildialog_summary">ارسل الملاحظات بالبريد</string>
	<string name="pref_aboutdialog_title">عن البرنامج</string>
	<string name="pref_aboutdialog_summary">عن البرنامج</string>
    
	
    <!-- History Activity -->
    <string name="application_logs">أخر العمليات</string>
    <string name="clear_logs">تم مسح اخر العمليات بنجاح</string>
    
    <!-- Reports Activities -->
    <string name="title_activity_monthly_report">MonthlyReportActivity</string>
    <string name="title_activity_yearly_report">YearlyReportActivity</string>
    <string name="title_activity_speach_recognition">SpeachRecognitionActivity</string>
    <string name="table_header_blanace">المبلغ</string>
	<string name="table_header_operation">العملية</string>
	<string name="table_header_time">التاريخ</string>
	<string name="table_row_blanace_hidden">10000</string>
	<string name="table_row_operation_hidden">عملية تحويل</string>
	<string name="table_row_time_hidden">2013-08-26 08:55:00</string>
	<string name="chart_charging_label">شحن</string>
	<string name="chart_transfere_label">تحويل</string>
	<string name="tab_weekly">اسبوعي</string>
	<string name="tab_monlty">شهري</string>
	<string name="tab_yearly">سنوي</string>
	
    <!-- Speach Recognition Activity -->
    <string name="voice_ask">من فضلك أدخل رقم البطاقة</string>
    
     <!-- Application Gerenal Message -->
    <string name="yes_message">نعم</string>
    <string name="no_message">لا</string>
    <string name="sure_message">هل أنت متأكد؟</string>
    <string name="operation_done_sucesffully">تمت العملية بنجاح</string>
    <string name="operation_not_done">حدث خطأ في العملية</string>
    <string name="wait_message">يرجى الانتظار من فضلك ...</string>
    
    <!--  Lunch Email  -->
    <string name="mail_support_feedback_to">wajdyessam@hotmail.com</string>
    <string name="mail_support_feedback_subject">[برنامج الشاحن الذكي]</string>
    <string name="pref_sendemail_title">ارسال الملاحظات</string>
    
    <!--  Menu -->
    <string name="menu_about">عن البرنامح</string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_setting">اعدادات</string>
    <string name="menu_clear">مسح العمليات</string>
</resources>