<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings" > 
         <ListPreference
            android:key="applicationlanguage"
            android:title="@string/languageSettingLbl" 
            android:summary="@string/languageSettingSummary"
            android:entries="@array/languages"            
            android:defaultValue="ar"
            android:entryValues="@array/languagesValue"/>
                       
         <ListPreference
            android:key="companyName"
            android:entries="@array/companies"
            android:summary="@string/simTypeSummary"
            android:entryValues="@array/companiesValue"
            android:title="@string/simTypeLbl" />
         
         <EditTextPreference
            android:defaultValue="0000"
            android:key="simNo"
            android:summary="@string/simNoSummary"
            android:title="@string/simNoLbl" />
    </PreferenceCategory>

</PreferenceScreen>