<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:id="+id/charge_description"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:text="Chargeing Your Mobile" 
        />
    
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/charge_description"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/voice_button"     
        android:text="@string/ocrButtonLbl" />

     <Button
        android:id="@id/voice_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/charge_description"
        android:layout_alignParentRight="true"     
        android:text="Voice Charging" />        

    <ImageView 
	    android:id="@+id/picture"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/picture"
	    android:layout_margin="5dp"
	    android:background="@drawable/pic_border" />
    
    <EditText
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numberEditTextLbl" />
        
    <Button
        android:id="@+id/chargeButton"
        android:layout_width="match_parent"
        android:onClick="chargeButtonClicked"
        android:layout_height="wrap_content"
        android:text="@string/chargeButtonLbl" />
    
</LinearLayout>