<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/monthly_table_layout"
        android:layout_width="fill_parent"
        android:background="#D7E3F7" 
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"     
        android:orientation="vertical" >
     
         <TableLayout
        android:id="@+id/monthly_hidden_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

         <TableRow style="@style/HeaderRow" >

                <TextView
                    style="@style/HeaderText"
                    android:text="@string/table_header_blanace" >
                </TextView>

                <TextView
                    style="@style/HeaderText"
                    android:layout_weight="1"
                    android:text="@string/table_header_operation" >
                </TextView>

                <TextView
                    style="@style/HeaderText"
                    android:text="@string/table_header_time" >
                </TextView>
            </TableRow>

            <TableRow style="@style/BodyRow" >

                <TextView
                    style="@style/BodyText"
                    android:layout_height="0dp"
                    android:text="@string/table_row_blanace_hidden" />

                <TextView
                    style="@style/BodyText"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/table_row_operation_hidden" />

                <TextView
                    style="@style/BodyText"
                    android:layout_height="0dp"
                    android:text="@string/table_row_time_hidden" />
            </TableRow>
    </TableLayout>

    <ScrollView        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            android:id="@+id/monthly_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow style="@style/BodyRow" >

                    <TextView
                        style="@style/BodyText"
                        android:layout_height="0dp"
                        android:text="@string/table_row_blanace_hidden" />

                    <TextView
                        style="@style/BodyText"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/table_row_operation_hidden" />

                    <TextView
                        style="@style/BodyText"
                        android:layout_height="0dp"                        
                        android:text="@string/table_row_time_hidden" />
                </TableRow>
        </TableLayout>
    </ScrollView>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/monthlylinearlayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@id/monthly_table_layout"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#D7E3F7"
            android:orientation="horizontal"
            android:padding="15dp" >

            <TextView
                android:id="@+id/monthly_a1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="#53933f"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/monthly_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/monthly_a1"
                android:gravity="center_horizontal"
                android:text="@string/chart_charging_label"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/monthly_a3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/monthly_a2"
                android:background="#FF9A39"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/monthly_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/monthly_a3"
                android:gravity="center_horizontal"
                android:text="@string/chart_transfere_label"
                android:textColor="#000"
                android:textSize="16sp" />
        </RelativeLayout>

        <com.malaz.reports.HorizontalListView
            android:id="@+id/monthly_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    </LinearLayout>  

</RelativeLayout>