<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/table_layout"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"    
        android:background="#D7E3F7" 
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableLayout
                android:id="@+id/weekly_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" >

                <TableRow style="@style/HeaderRow" >
	                <TextView
	                    style="@style/HeaderText"
	                    android:text="@string/table_header_blanace" >
	                </TextView>
	
	                <TextView
	                    style="@style/HeaderText"
	                    android:text="@string/table_header_operation" >
	                </TextView>
	
	                <TextView
	                    style="@style/HeaderText"
	                    android:text="@string/table_header_time" >
	                </TextView>
            	</TableRow>                    
            </TableLayout>
        </ScrollView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/weeklylinearlayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@id/table_layout"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"            
            android:padding="15dp" >

            <TextView
                android:id="@+id/weekly_a1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="#53933f"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weekly_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/weekly_a1"
                android:gravity="center_horizontal"
                android:text="@string/chart_charging_label"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weekly_a3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/weekly_a2"
                android:background="#FF9A39"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weekly_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/weekly_a3"
                android:gravity="center_horizontal"
                android:text="@string/chart_transfere_label"
                android:textColor="#000"
                android:textSize="16sp" />
        </RelativeLayout>

        <com.malaz.reports.HorizontalListView
            android:id="@+id/weekly_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    </LinearLayout>   
</RelativeLayout>